# GoldBach

./: README.md
Source/: CMakeLists.txt  Calculator1.h  Generator1.c  Generator2.c  Generator3.c  Generator4.c
Source/PrimeNumberList/: FinalPrimeList.txt  primeList1.txt  primeList2.txt  primeList3.txt  primeList4.txt
